--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//firstPackage/forthModule.py=utf8
 encoding//firstPackage/insatllAndLogin.py=utf8
 encoding//firstPackage/secondModule.py=utf8
+encoding//firstPackage/test.py=utf8
 encoding//firstPackage/thirdModule.py=utf8
